--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 base64 = "0.22.1"
 clap = { version = "4.5.13", features = ["derive"] }
-drillx = { path = "../drillx/drillx" }
+drillx = "2.0.0"
 futures-util = "0.3.30"
 rpassword = "7.3.1"
 tokio = { version = "1.39.2", features = ["full"] }
